--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ before_build:
             $env:TARGET="VC-WIN32"
             $env:DO="do_ms"
         } Else {
-            $env:VCVARS_PLATFORM="amd64"
+            $env:VCVARS_PLATFORM="x86_amd64"
             $env:TARGET="VC-WIN64A"
             $env:DO="do_win64a"
         }
