--- a/crypto/ct/Makefile.in
+++ b/crypto/ct/Makefile.in
@@ -16,9 +16,9 @@ GENERAL=Makefile
 
 LIB=$(TOP)/libcrypto.a
 LIBSRC= ct_b64.c ct_err.c ct_log.c ct_oct.c ct_policy.c ct_prn.c ct_sct.c \
-        ct_sct_ctx.c ct_vfy.c ct_x509v3.c
+        ct_sct_ctx.c ct_sig.c ct_vfy.c ct_x509v3.c
 LIBOBJ= ct_b64.o ct_err.o ct_log.o ct_oct.o ct_policy.o ct_prn.o ct_sct.o \
-        ct_sct_ctx.o ct_vfy.o ct_x509v3.o
+        ct_sct_ctx.o ct_sig.o ct_vfy.o ct_x509v3.o
 
 SRC= $(LIBSRC)
 
